--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Stanislav Snizhko || Web Developer Resume</title>
 </head>
 <body>
+    <header>
+        <img src="./pictures/SSScrenshot.png" alt="Stanislav Snizhko logo">
+        <ul>
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
+        </ul>
+    </header>
     
 </body>
 </html>
