Create header and style it with css
Added logo to the header, added 3 links as a list fot now with dummy
text. Styled it with css in header.css

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/header.css">
     <title>Stanislav Snizhko || Web Developer Resume</title>
 </head>
 <body>
     <header>
-        <img src="./pictures/SSScrenshot.png" alt="Stanislav Snizhko logo">
+        <img class="logo-img" src="./pictures/SSScrenshot.png" alt="Stanislav Snizhko logo">
         <ul>
-            <a href="#">header link one</a>
-            <a href="#">header link two</a>
-            <a href="#">header link three</a>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
     </header>
     
