Create introduction part, link global and main css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/body.css">
     <title>Stanislav Snizhko || Web Developer Resume</title>
 </head>
 <body>
@@ -15,6 +17,19 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </header>
+    <main>
+        <div class="introduction-container">
+            <div class="text-introduction">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
+                <button>Sign up</button>
+            </div>
+            <div>
+                <img class="img-introduction" src="https://www.color-hex.com/palettes/6535.png" alt="white box">
+            </div>
+        </div>
+
+    </main>
     
 </body>
 </html>
