Create project section and style it with css
Added 4 project dummies with dummie text for now
and make them look like design using css.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,38 @@
                 <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
                 <button>Sign up</button>
             </div>
-            <div>
+            <div class="img-introduction-container">
                 <img class="img-introduction" src="https://www.color-hex.com/palettes/6535.png" alt="white box">
             </div>
+        </div>
+        <div class="projects-container">
+            <h1 class="projects-title">Some random information</h1>
+            <div class="projects-columns">
+              <div class="project-column">
+                <div class="project-img">
+                </div>
+                <p class="text-under-project">this is some subtext under an illustration or image</p>
+              </div>
+
+              <div class="project-column">
+                <div class="project-img">
+                </div>
+                <p class="text-under-project">this is some subtext under an illustration or image</p>
+              </div>
+
+              <div class="project-column">
+                <div class="project-img">
+                </div>
+                <p class="text-under-project">this is some subtext under an illustration or image</p>
+              </div>
+
+              <div class="project-column">
+                <div class="project-img">
+                </div>
+                <p class="text-under-project">this is some subtext under an illustration or image</p>
+              </div>
+            </div>
+
         </div>
 
     </main>
