--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </ul>
     </header>
     <main>
+
         <div class="introduction-container">
             <div class="text-introduction">
                 <h1>This website is awesome</h1>
@@ -28,6 +29,7 @@
                 <img class="img-introduction" src="https://www.color-hex.com/palettes/6535.png" alt="white box">
             </div>
         </div>
+
         <div class="projects-container">
             <h1 class="projects-title">Some random information</h1>
             <div class="projects-columns">
@@ -55,9 +57,12 @@
                 <p class="text-under-project">this is some subtext under an illustration or image</p>
               </div>
             </div>
-
         </div>
 
+        <div class="quote-container">
+            <p class="quote">This is inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All i know is that it looks nice.</p>
+            <p class="author">- Thor, God of Thunder</p>  
+        </div>
     </main>
     
 </body>
