Add signin section fix top button fix body margin
Added singnin section with dummy text
Added style to top button
Removed body margin by properly linking global.css to
index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/body.css">
+    <link rel="stylesheet" href="./styles/global.css">
     <title>Stanislav Snizhko || Web Developer Resume</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
             <div class="text-introduction">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</p>
-                <button>Sign up</button>
+                <button class="signup-top-but">Sign up</button>
             </div>
             <div class="img-introduction-container">
                 <img class="img-introduction" src="https://www.color-hex.com/palettes/6535.png" alt="white box">
@@ -62,6 +62,17 @@
         <div class="quote-container">
             <p class="quote">This is inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actualy read it. Who knows? All i know is that it looks nice.</p>
             <p class="author">- Thor, God of Thunder</p>  
+        </div>
+
+        <div class="signin-container">
+            <div class="signin">
+                <div class="signin-content">
+                    <p class="signin-text">Call to action! It's time!</p>
+                    <p class="signin-smalltext">Sing up for our product by clicking that button over there!</p>
+                </div>
+                <button class="lower-singin-but">Sign in</button>
+            </div>
+
         </div>
     </main>
     
