Create footer section and style it with css
Created footer with adress adn styled it with css,
changed from gradient back to solid background.

--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
                 </div>
                 <button class="lower-singin-but">Sign in</button>
             </div>
-
         </div>
+
+        <footer>
+            <address>Copyright © The Stanislav Snizhko Resume</address>
+        </footer>
     </main>
     
 </body>
